[package]
name = "event-logger"
version = "0.1.0"
authors = ["Markus Ast <m@rkusa.st>"]
license = "AGPL-3.0-or-later"
edition = "2018"
resolver = "2"

[dependencies]
backoff = { version = "0.3", features = ["tokio"] }
clap = "2.33"
dcs-grpc-server = { git = "https://github.com/DCS-gRPC/rust-server.git", rev = "6933ac82275fb8037f31827817fb72f60582d056" }
dotenv = "0.15"
futures-util = "0.3"
once_cell = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sqlx = { version = "0.5", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "tls", "macros", "migrate", "offline"] }
thiserror = "1.0"
tokio =  { version = "1.13", features = ["macros", "signal"] }
tonic = "0.4"
tracing = "0.1"
tracing-subscriber = "0.2"
